<resources>
    <string name="app_name">Playround</string>
    <string name="app_version">Playround Android v.1.0.6.02</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">846009488767381</string>
    <string name="mainactivity_title">Playround</string>
    <string name="loginactivity_title">Playround</string>
    <string name="meactivity_title">Me</string>
    <string name="mysportactivity_title">My Invitation</string>
    <string name="matchdetailactivity_title">Workout Detail</string>
    <string name="settingactivity_title">Setting</string>
    <string name="inviteactivity_title">Invite</string>
    <string name="joinactivity_title">Join</string>
    <string name="localactivity_title">Explore</string>
    <string name="messagelistactivity_title">Message</string>
    <string name="messagereplyactivity_title">Reply</string>
    <string name="action_Invite">Invite</string>
    <string name="action_search">Search</string>
    <string name="action_message">Message</string>
    <string name="action_map">Map</string>
    <string name="action_local">Near Invitation</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
    <string name="action_setting">Setting</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="logout_full">Log out</string>
    <string name="post_out_of_range">It is far away.</string>
    <string name="progress_invite">Inviting&#8230;</string>
    <string name="progress_send">Sending&#8230;</string>
    <string name="progress_join">Joining&#8230;</string>
    <string name="hostplayerusername">Username</string>
    <string name="progress_local">Loading&#8230;</string>
    <string name="OMEPARSELOGOUT">Logout</string>
    <string name="OMEPARSELOGIN">Login</string>
    <string name="OMEPARSESETTING">Setting</string>
    <string name="OMEPARSEOK">OK</string>
    <string name="OMEPARSEYES">Yes</string>
    <string name="OMEPARSENO">No</string>
    <string name="OMEPARSEINVITEPLAYDATE">Date</string>
    <string name="OMEPARSEINVITEPLAYHOUR">Hour</string>
    <string name="OMEPARSEINVITEPLAYBUTTON">Invite Play</string>
    <string name="OMEPARSEINVITESPORTTYPECHOOSE">Choose Sport</string>
    <string name="OMEPARSEINVITEPLAYERLEVELCHOOSE">Choose Level</string>
    <string name="OMEPARSEINVITEPLAYERNUMBERCHOOSE">Choose Number</string>
    <string name="OMEPARSEINVITEPLAYFEECHOOSE">Choose Fee</string>
    <string name="OMEPARSEINVITELOGINALERT">please login or register!</string>
    <string name="OMEPARSEINVITEREALLYPLAY">Do you really play with someone?</string>
    <string name="OMEPARSEINVITEOTHERDEFAULT">Good buddy</string>
    <string name="OMEPARSEINVITECOURTDEFAULT">MIT</string>
    <string name="OMEPARSEINVITEFEEDEFAULT">AA</string>
    <string name="OMEPARSEINVITEFEEFREE">Free</string>
    <string name="OMEPARSEINVITEPLAYERSUBMITSUCCESSALERTINFO">Successfully submit share, please wait someone for join!</string>
    <string name="OMEPARSEINVITESPORTPROMPT">Select Your Favourite Sport</string>
    <string-array name="sport_type_array">

        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Beach Volleyball</item>
        <item>Bowling</item>
        <item>Cricket</item>
        <item>Football, American</item>
        <item>Football, Rugby</item>
        <item>Football, Soccer</item>
        <item>Golf</item>
        <item>Handball</item>
        <item>Hockey</item>
        <item>Polo</item>
        <item>Ice Hockey</item>
        <item>Squash</item>
        <item>Table Soccer</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Water Polo</item>
        <item>Snooker</item>

        <item>Cycling Mountain Bike</item>
        <item>Cycling Road</item>
        <item>Fitness walking</item>
        <item>Running</item>
        <item>Walking</item>
        <item>Treadmill</item>
        <item>Trekking</item>

        <item>Canoe</item>
        <item>Diving</item>
        <item>Kite surfing</item>
        <item>Rowing</item>
        <item>Sailing</item>
        <item>Scuba diving</item>
        <item>Surfing</item>
        <item>Swimming</item>
        <item>Windsurfing</item>

        <item>Canyoning</item>
        <item>Caving</item>
        <item>Climbing</item>
        <item>Ice climbing</item>
        <item>Orienteering</item>
        <item>Skateboarding</item>

        <item>Archery</item>
        <item>Shooting</item>
        <item>Dart</item>

        <item>Alpine Skiing</item>
        <item>Bobsleigh</item>
        <item>Cross country ski</item>
        <item>Luge</item>


        <item>Roller skiing</item>
        <item>Ski Jumping</item>
        <item>Snowboarding</item>
        <item>Snowshoeing</item>
        <item>Speed skating</item>
        <item>Short Track Speed Skating</item>
        <item>Skating</item>
        <item>Skeleton</item>
        <item>Curling</item>

        <item>Boxing</item>
        <item>Dancing</item>
        <item>Elliptical training</item>
        <item>Fencing</item>
        <item>Gymnastics</item>
        <item>Judo</item>
        <item>Martial arts</item>
        <item>Pilates</item>
        <item>Poker</item>
        <item>Riding</item>
        <item>Taekwondo</item>
        <item>Trampoline</item>
        <item>Weight training</item>
        <item>Wheelchair</item>
        <item>Wrestling</item>
        <item>Yoga</item>
        <item>Gym</item>
        <item>Inline skating</item>
        <item>Karting</item>



    </string-array>
    <string name="OMEPARSEINVITEPLAYCOURTPLACEHOLD">Enter court</string>
    <string name="OMEPARSEINVITEPLAYOTHERPLACEHOLD">Enter other requirement</string>
    <string name="OMEPARSEINVITEPLAYERALERTINFO">Do you really join play?</string>
    <string name="OMEPARSEINVITEREQUIREMENTSPORTTYPE">Sport Type</string>
    <string name="OMEPARSEINVITEREQUIREMENTPLAYERNUMBER">Number</string>
    <string name="OMEPARSEINVITEREQUIREMENTPLAYERLEVEL">Play Level</string>
    <string name="OMEPARSEINVITEREQUIREMENTTIME">Time</string>
    <string name="OMEPARSEINVITEREQUIREMENTCOURT">Court</string>
    <string name="OMEPARSEINVITEREQUIREMENTFEE">Fee</string>
    <string name="OMEPARSEINVITEREQUIREMENTOTHER">Other</string>
    <string name="OMEPARSEINVITEJOINPLAYHEADER"> </string>
    <string name="OMEPARSEINVITEJOINPLAYBUTTON">Join</string>
    <string name="OMEPARSEINVITEPLAYERJOINPLAYSUCCESSALERTINFO">Successfully submit request, please wait for reply!</string>
    <string name="OMEPARSEMESSAGEJOINPLAYREQUESTFIRSTPART">Hi</string>
    <string name="OMEPARSEMESSAGEJOINPLAYREQUESTSECONDPART">I am</string>
    <string name="OMEPARSEMESSAGEJOINPLAYREQUESTTHIRDPART"> with you</string>
    <string name="OMEPARSEWANTTOKEY">want to</string>
    <string name="OMEPARSEINVITETITLEPLAY">play</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Register</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Login&#8230;</string>
    <string name="progress_signup">Register&#8230;</string>
    <string name="current_location_unavailable">Please try again after your location appears on the map.</string>
    <string name="google_play_service_unavailable">This device does not support google play services !</string>
    <string name="switch_to_china_map">Switch map service !</string>
    <string name="cannot_access_server">Cannot access server, please re-login !</string>
    <string name="locate_fail">Get location failed in 12 seconds，stop locate!</string>
    <string name="google_map_unavailable">Google Map can not access !</string>
    <string name="OMEPARSEFEEDBACK">Feedback</string>
    <string name="OMEPARSEFEEDBACKSENDBUTTON">Send</string>
    <string name="OMEPARSEFEEDBACKSENDING">Sending&#8230;</string>
    <string name="OMEPARSEFEEDBACKHINT">Thank you for your feedback and suggestion,Playround team will follow your feedback and suggestion to improve Playround app perfomance!\n\n                   @Playround Team</string>
    <string name="OMEPARSEMESSAGEREPLYBUTTON">Send</string>
    <string name="OMEPARSEUSERSTATUSONLINE">Online</string>
    <string name="OMEPARSEUSERSTATUSOFFLINE">Offline</string>
    <string name="OMEPARSEUSERSTATUSAWAY">Away</string>
    <string name="OMEPARSEUSERSTATUSBUSY">Busy</string>
    <string name="OMEPARSEMEMYSPORTTITLE">My Workout</string>
    <string name="OMEPARSEMEMATCHDETAILTITLE">Workout Detail</string>
    <string name="OMEPARSEMEMYSPORT">My Sport</string>
    <string name="OMEPARSEMEMYCOURTADDRESS">My Venue Address</string>
    <string name="OMEPARSEMEMYSETTINGS">Settings</string>
    <string name="OMEPARSEMEMYSETTINGSNOTIFICATIONSHEADER">Notifications</string>
    <string name="OMEPARSEMEMYSETTINGSGENERALHEADER">General Info</string>
    <string name="OMEPARSEMEMYSETTINGMATCHDETAILPLAYERS">Players</string>
    <string name="OMEPARSEMEPROFILEPLAYROUNDID">Playround ID</string>
    <string name="OMEPARSEMEPROFILEALIAS">Alias</string>
    <string name="OMEPARSEMEPROFILEAVATAR">Avatar</string>
    <string name="OMEPARSEMEPROFILEQRCODE">QR Code</string>
    <string name="OMEPARSEMEPROFILECHOOSEIMAGE">Choose photo</string>
    <string name="OMEPARSEMEPROFILETAKEPHOTO">Take photo</string>
    <string name="OMEPARSEMESPORTNOONEPLAYER">No player join this match, Be patient!</string>
    <string name="OMEPARSECHATFILETRANMITFINISH">Finish</string>
    <string name="OMEPARSECHATFILETRANMITFAILED">Fail</string>
    <string name="OMEPARSECHATFILETRANMITREQUEST">Request for sending file</string>
    <string name="OMEPARSECHATFILETRANMITREJECT">Reject</string>
    <string name="OMEPARSECHATTYPING">typing...</string>
    <string name="OMEPARSEADDCONTACTSEARCHHINT">Playround ID</string>
    <string name="OMEPARSEADDCONTACTSEARCHSETTING">Search Contact</string>
    <string name="OMEPARSEADDCONTACTMYID">My Playround ID:</string>
    <string name="OMEPARSEADDCONTACTFRIENDRADAR">Friend Radar</string>
    <string name="OMEPARSEADDCONTACTNEARBYNOTE">Find friend in your nearby</string>
    <string name="create_name_hint">Profile Name</string>
    <string name="create_register">Register</string>
    <string name="create_register_incog">Register Incognito</string>
    <string name="OMEPARSECOURTSTEXT">Courts</string>
    <string name="OMEPARSEDATETEXT">Date</string>
    <string name="OMEPARSEVENUEBOOKINGDEPOSIT">Advance Deposit</string>
    <string name="OMEPARSEBOOKINGPAYMUSTKNOW">Must know for payment :</string>
    <string name="OMEPARSEBOOKINGPAYMUSTKNOWONE">1. Please check venue, time and mobile phone number</string>
    <string name="OMEPARSEBOOKINGPAYMUSTKNOWTWO">2. Please check payment account if the same as user setting payment account, refund will pay to user setting payment account</string>
    <string name="OMEPARSEPHONENUMBERTEXT">Phone Number</string>
    <string name="OMEPARSEPAYUSEMETHODTEXT">Using Alipay to pay</string>
    <string name="OMEPARSEPRIMETEXT">Prime</string>
    <string name="OMEPARSEFEETEXT">Fee</string>
    <string name="OMEPARSEPAYBUYPRIMEMEMBERSHIPMUSTKNOWONE">1. Please check prime,fee and phone number</string>
    <string name="OMEPARSEPAYBUYPRIMEMEMBERSHIPMUSTKNOWTWO">2. If pay successfully, you will receive one SMS verification code, then use it to workout</string>
</resources>