<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/test_bg"
    android:gravity="top"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/test_bg"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large"
        android:paddingTop="@dimen/margin_small"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <EditText
        android:id="@+id/create_account_name"
            android:gravity="center"
        android:hint="@string/create_name_hint"
        android:layout_width="300dp"
        android:background="@drawable/edittextbackground"
        android:layout_height="50dp"
        android:singleLine="true" />


        <EditText
            android:id="@+id/create_bio"
            android:layout_width="200dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/edittextbackground"/>

        <Button
            android:id="@+id/create_account"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/create_register"
            android:textColor="@color/white"
            android:background="#6BC25F"
            android:layout_marginTop="10dp"
            android:onClick="onClickRegisterAccount"/>

        <Button
            android:id="@+id/create_account_incog"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/create_register_incog"
            android:textColor="@color/white"
            android:background="#414141"
            android:layout_marginTop="75dp"
            android:onClick="onClickRegisterIncogAccount"/>

    </LinearLayout>
</ScrollView>
